# c-toxcore-cmake

./: .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
lib/misc_tools/: CMakeLists.txt
lib/toxcore/: CMakeLists.txt
lib/toxcore/test/: CMakeLists.txt
lib/toxencryptsave/: CMakeLists.txt
lib/toxencryptsave/test/: CMakeLists.txt
